[package]
name = "cargo-lockdiff"
version = "0.1.0"
authors = ["David Jonas <djonas@noip.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
cargo-lock = { version = "4", default-features = false, features = [] }
prettytable-rs = "0.8"
