[package]
name = "cargo-lockdiff"
version = "0.2.0"
authors = ["David Jonas <djonas@noip.com>"]
edition = "2018"
license = "MIT"
keywords = ["cargo", "lockdiff", "dependency", "lockfile", "diff"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
repository = "https://github.com/davidrjonas/cargo-lockdiff"
readme = "README.md"
description = "See what crates have changed after you run `cargo update` by comparing Cargo.lock to the vcs ref or file of your choice."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "^0.6"
cargo-lock = { version = "7", default-features = false, features = [] }
paw = "1"
prettytable-rs = "0.8"
serde_json = "1"
